fixed all major layout problems on fretboard ui

--- a/assets/scss/components/layout/_fretboard-view.scss
+++ b/assets/scss/components/layout/_fretboard-view.scss
@@ -30,9 +30,10 @@
     @include media-medium {
       position: relative;
       display: flex;
-      grid-column: 2;
+      grid-column: 1;
       grid-row: 1;
       padding-right: 1rem;
+      width: 100%;
     }
 
     h1 {
